--- a/src/userprog/DESIGNDOC.tmpl
+++ b/src/userprog/DESIGNDOC.tmpl
@@ -53,6 +53,47 @@ FirstName LastName <email@domain.example>
 >> `struct' member, global or static variable, `typedef', or
 >> enumeration.  Identify the purpose of each in 25 words or less.
 
+/*Global lock used in process and syscall files
+which secures that the child_process struct is not being
+exposed to race conditions */
+struct lock process_lock;
+
+/*This struct is in charge of all commmunication
+between parent and a particular child. Makes it 
+possible to wait, free correctly, pass error, etc*/
+struct child_process
+{
+   tid_t tid;                    /*Threads tid*/
+   int status;                   /*Threads status*/
+   bool wait_called;             /*Has parent already called process_wait on child*/
+   bool child_error;             /*Did the child encounter an error*/
+   bool tried_to_free;           /*Did the parent try to free this child*/
+   char *file_name;              /*Child thread file name*/
+   struct semaphore wait_child;  /*Semaphore to make parent wait for start process to finish before finishing exec_proces*/
+   struct list_elem wait_elem;   /*Elem for child to be put in parents list*/
+   struct condition wait_cond;   /*Cond variable to wake up parent in process_wait when child exits*/
+   struct lock wait_lock;        /*Lock to wake up parent in process_wait when child exits*/
+
+};
+
+
+struct fd_elem
+{
+  int fd;
+  struct file *file;
+  struct list_elem elem;
+};
+
+struct thread
+{
+   char exec_name[16];        /* Name used to print */
+   struct file *exec_file;    /* File being executed*/
+   int fd;                   /* Threads fd */
+   struct list fd_list;      /* Threads fd_list */
+   struct list children; /*List of this threads chilldren*/
+   struct child_process *process; /*Child_process of this thread*/
+};
+
 >> B2: Describe how file descriptors are associated with open files.
 >> Are file descriptors unique within the entire OS or just within a
 >> single process?
