--- a/src/userprog/DESIGNDOC.tmpl
+++ b/src/userprog/DESIGNDOC.tmpl
@@ -8,9 +8,9 @@
 
 >> Fill in the names and email addresses of your group members.
 
-FirstName LastName <email@domain.example>
-FirstName LastName <email@domain.example>
-FirstName LastName <email@domain.example>
+Pilli Cruz-De Jesus <pilli@stanford.edu>
+Angel Ruiz <ar7@stanford.edu>
+Fabian Luna <luna1206@stanford.edu>
 
 ---- PRELIMINARIES ----
 
